--- a/TIMESHEETS_FRONTEND/src/app/account/auth/recoverpwd2/recoverpwd2.component.html
+++ b/TIMESHEETS_FRONTEND/src/app/account/auth/recoverpwd2/recoverpwd2.component.html
@@ -22,12 +22,12 @@
                                                     <ng-template carouselSlide>
                                                         <div class="item">
                                                             <div class="py-3">
-                                                              <p class="font-size-16 mb-4">" "Impressive tool! Love the notifications feature. Easy to use. Great support from the team. Thank you team   Lazo!" "
+                                                              <p class="font-size-16 mb-4">" "Impressive tool! Love the notifications feature. Easy to use. Great support from the team. Thank you team!" "
                                                                 </p>
 
                                                                 <div>
                                                                     <h4 class="font-size-16 text-primary">Albert1981</h4>
-                                                                    <p class="font-size-14 mb-0">- Lazo User</p>
+                                                                    <p class="font-size-14 mb-0">- User</p>
                                                                 </div>
                                                             </div>
 
@@ -65,8 +65,8 @@
                         <div class="d-flex flex-column h-100">
                             <div class="mb-4 mb-md-5">
                                 <a routerLink="/" class="d-block auth-logo">
-                                    <img [src]="mode === 'dark' ? 'assets/images/logos/lazo.png' : 'assets/images/logos/lazo.png'" alt="lazo"
-                                      height="90"
+                                    <img [src]="mode === 'dark' ? '/assets/images/logos/timesheets.png' : '/assets/images/logos/timesheets.png'" alt="time"
+                                      height="40"
                                       class="logo" />
                                   </a>
                             </div>
@@ -167,7 +167,7 @@
 
 
                             <div class="mt-4 mt-md-5 text-center">
-                                <p class="mb-0">©{{year}} Lazo.</p>
+                                <p class="mb-0">©{{year}}.</p>
                             </div>
                         </div>
                     </div>
