--- a/TIMESHEETS_FRONTEND/src/app/account/auth/signup/signup.component.html
+++ b/TIMESHEETS_FRONTEND/src/app/account/auth/signup/signup.component.html
@@ -14,8 +14,8 @@
               </div>
               <div class="col-5 align-self-center">
                 <a routerLink="/" class="d-block auth-logo">
-                  <img [src]="mode === 'dark' ? 'assets/images/logos/lazo.png' : 'assets/images/logos/lazo.png'" alt="lazo"
-                  height="90"
+                  <img [src]="mode === 'dark' ? '/assets/images/logos/timesheets.png' : '/assets/images/logos/timesheets.png'" alt="timesheets"
+                  height="40"
                   class="logo" />
                 </a>
               </div>
@@ -190,7 +190,7 @@
             >
           </p>
           <p>
-            © {{ year }} Lazo
+            © {{ year }}
             <i class="mdi mdi-heart text-danger"></i>
           </p>
         </div>
