--- a/TIMESHEETS_FRONTEND/src/app/account/auth/verification/verification.component.html
+++ b/TIMESHEETS_FRONTEND/src/app/account/auth/verification/verification.component.html
@@ -4,8 +4,8 @@
             <div class="col-lg-12">
                 <div class="text-center mb-5">
                     <a routerLink="/" class="d-block auth-logo">
-                      <img [src]="mode === 'dark' ? 'assets/images/logos/lazo.png' : 'assets/images/logos/lazo.png'" alt="lazo"
-                      height="90"
+                      <img [src]="mode === 'dark' ? '/assets/images/logos/timesheets.png' : '/assets/images/logos/timesheets.png'" alt="timesheets"
+                      height="40"
                       class="logo mx-auto" />
                     </a>
                 </div>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="mt-5 text-center">
-                    <p>© {{year}} Lazo.</p>
+                    <p>© {{year}} Ltimesheetsazo.</p>
                 </div>
 
             </div>
