--- a/TIMESHEETS_FRONTEND/src/assets/scss/_variables.scss
+++ b/TIMESHEETS_FRONTEND/src/assets/scss/_variables.scss
@@ -142,8 +142,8 @@ $colors: (
 // scss-docs-end colors-map
 
 // scss-docs-start theme-color-variables
-$primary:       #fe0043;
-$secondary:     #f77a4b;
+$primary:       #060880;
+$secondary:     #1d85b9;
 $success:       $green;
 $info:          $cyan;
 $warning:       $yellow;
