--- a/TIMESHEETS_FRONTEND/src/app/account/auth/register2/register2.component.html
+++ b/TIMESHEETS_FRONTEND/src/app/account/auth/register2/register2.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid p-0">
   <div class="row g-0">
     <div class="col-xl-8">
-      <div class=" pt-lg-5 p-4">
+      <div class="auth-full-bg pt-lg-5 p-4">
         <div class="w-100">
           <div class="bg-overlay bg-dark-color"></div>
           <div class="d-flex h-100 flex-column">
@@ -25,7 +25,7 @@
                           <div class="item">
                             <div class="py-3">
                               <p class="font-size-16 mb-4">
-                                " Impressive tool! Love the notifications feature. Easy to use. Great support from the team. Thank you team Lazo! "
+                                " Impressive tool! Love the notifications feature. Easy to use. Great support from the team. Thank you team! "
                               </p>
 
                               <div>
@@ -48,7 +48,7 @@
                                 <h4 class="font-size-16 text-primary">
                                   valen345h
                                 </h4>
-                                <p class="font-size-14 mb-0">- Lazo User</p>
+                                <p class="font-size-14 mb-0">- User</p>
                               </div>
                             </div>
                           </div>
@@ -71,8 +71,8 @@
           <div class="d-flex flex-column h-100">
             <div class="mb-2">
               <a routerLink="/" class="d-block auth-logo">
-                <img [src]="mode === 'dark' ? 'assets/images/logos/lazo.png' : 'assets/images/logos/lazo.png'" alt="robin"
-                height="90"
+                <img [src]="mode === 'dark' ? '/assets/images/logos/timesheets.png' : '/assets/images/logos/timesheets.png'" alt="robin"
+                height="40"
                 class="logo" />
               </a>
             </div>
@@ -80,12 +80,6 @@
               <div class="mb-4">
                 <h3 class="welcome-text">{{ TRANSLATE_KEY+ 'CREATE_ACCOUNT' | translate }}</h3>
               </div>
-              <div class="mt-2 d-grid">
-                <button (click)="redirectToExternalAuth('google')" class="btn bg-transparent p-2 btn-light text-dark fw-semibold google-btn">
-                  <img src="assets/images/oauth/google.svg" class="bg-white rounded-circle me-1" width="24" height="24" alt=""> {{ TRANSLATE_KEY+ 'REGISTER_WITH_GOOGLE' | translate }}
-                </button>
-              </div>
-              <p class="text-center mt-3 mb-0">Or</p>
               <div class="mt-3">
                 <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
                   <ngb-alert
@@ -237,9 +231,9 @@
 
                   <div>
                     <p class="mb-0">
-                     {{ TRANSLATE_KEY+ 'REGISTER_BY_ROBIN' | translate }}
+                     Al registrase acepta los
                       <a href="/#/meta/terms-use" class="text-primary"
-                      >{{ TRANSLATE_KEY+ 'TERMS' | translate }}</a
+                      >Terminos</a
                       >
                     </p>
                   </div>
@@ -253,17 +247,7 @@
 
                 </form>
 
-                <div class="mt-2 text-center">
-                  <p>
-                    {{ TRANSLATE_KEY+ 'SING_COMPANY' | translate }}
-                    <a
-                      routerLink="/wholesale-form"
-                      class="fw-medium text-primary"
-                    >
-                    {{ TRANSLATE_KEY+ 'GO' | translate }}</a
-                    >
-                  </p>
-                </div>
+
                 <div class="mt-2 text-center">
                   <p>
                     {{ TRANSLATE_KEY+ 'ALREDY' | translate }}
