--- a/TIMESHEETS_FRONTEND/src/app/account/pages/reset-password-page/reset-password-page.component.html
+++ b/TIMESHEETS_FRONTEND/src/app/account/pages/reset-password-page/reset-password-page.component.html
@@ -211,7 +211,7 @@
             </a>
           </p>
           <p>
-            © {{ year }} Lazo.
+            © {{ year }} timesheets.
           </p>
         </div>
       </div>
