--- a/TIMESHEETS_FRONTEND/src/app/web-site/modules/layout/components/footer/footer.component.html
+++ b/TIMESHEETS_FRONTEND/src/app/web-site/modules/layout/components/footer/footer.component.html
@@ -25,9 +25,9 @@
           <div class="blog-post">
             <a href="javascript: void(0);" class="post">
               <div class="badge badge-soft-success font-size-11 mb-3">
-                Lazo Deploy
+                timesheets Deploy
               </div>
-              <h5 class="post-title">Lazo desplego sus servicios web al publico</h5>
+              <h5 class="post-title">timesheets desplego sus servicios web al publico</h5>
               <p class="mb-0">
                 <i class="bx bx-calendar me-1"></i> Feb, 2024
               </p>
@@ -43,13 +43,12 @@
     <div class="row">
       <div class="col-lg-6">
         <div class="mb-4">
-          <img src="assets/images/logos/lazo.png" alt="" height="70" />
+          <img src="/assets/images/logos/timesheets.png" alt="" height="70" />
         </div>
 
-        <p class="mb-2">{{ year }} © Lazo.</p>
+        <p class="mb-2">{{ year }} © timesheets.</p>
         <p>
-          Un lazo con tu mascota.
-Descubre nuestra línea exclusiva de productos para tu fiel compañero.
+          timesheets.
         </p>
       </div>
     </div>
