--- a/TIMESHEETS_FRONTEND/src/assets/scss/custom/pages/_authentication.scss
+++ b/TIMESHEETS_FRONTEND/src/assets/scss/custom/pages/_authentication.scss
@@ -56,11 +56,10 @@
     }
 
     .bg-overlay{
-        background: url("../../../images/login/login.png");
+        background: url("../../../images/logos/login.png");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
-        opacity: 1 !important;
     }
 }
 
